# firefly-narrative

./: .design-system-guidance.json  .diagramrc  .env.agentation.example  .gitignore  .gitleaks.toml  .markdownlint-cli2.yaml  .memory-metrics.json  .mise.toml  .npmrc  .release-please-manifest.json  AGENTS.md  AUDIT_REPORT.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FORJAMIE.md  GEMINI.md  IMPROVEMENTS.md  Makefile  PROJECT_TRACKING.md  README.md  SECURITY.md  SUPPORT.md  VISION.md  biome.json  harness.contract.json  index.html  lighthouserc.cjs  lighthouserc.json  memory.json  null  package.json  playwright.config.ts  pnpm-lock.yaml  prek.toml  readout-inspired-v3.html  release-please-config.json  serve.mjs  tsconfig.json  (+4 more)
docs/: README.md  (+4 more)
src-tauri/: Cargo.toml  osv-scanner.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_init.sql  002_add_session_links.sql  003_add_agent_trace.sql  004_session_attribution.sql  005_attribution_notes.sql  008_add_collaborative_lines.sql  009_auto_ingest.sql  010_test_runs.sql  011_story_anchors.sql  012_atlas.sql  016_trust_recovery_checkpoints.sql  017_approval_ledger.sql  019_approval_ledger_thread_id_index.sql  020_json_validation_checkpoints.sql
src-tauri/src/: activity.rs  approval_ledger.rs  codex_app_server.rs  commands.rs  file_watcher.rs  git_diff.rs  ingest_config.rs  lib.rs  link_commands.rs  linking.rs  main.rs  models.rs  otlp_receiver.rs  recovery_checkpoint.rs  secret_store.rs  session_hash.rs  session_links.rs  trace_commands.rs
(+617 files in other folders)
